# SolariumProcessor

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: release.yaml  website.yaml
cbc/src/: main.rs
cbfs/: .clang-format  CMakeLists.txt  Cargo.toml  run_basic_fuse_test.sh
cbfs-bin/: Cargo.toml
cbfs-bin/src/: filesystem.rs  fserr.rs  main.rs
cbfs-lib/: Cargo.toml  build.rs
cbfs-lib/src/: compat.rs  container.rs  datetime.rs  entries.rs  filesystem.rs  lib.rs  names.rs  volume.rs
cbfs-util/: Cargo.toml
cbfs-util/src/: main.rs
cbfs/cbfs/: .clang-format  CMakeLists.txt
cbfs/cbfs-fuse/: CMakeLists.txt
cbfs/cbfs-fuse/compat/: Cargo.toml
cbfs/cbfs-fuse/src/: main.cpp
cbfs/cbfs-lib/: Cargo.toml
cbfs/cbfs-lib/src/: container.rs  datetime.rs  entries.rs  filesystem.rs  lib.rs  names.rs  volume.rs
cbfs/cbfs-util/: Cargo.toml
cbfs/cbfs-util/src/: main.rs
cbfs/cbfs/compat/: Cargo.toml
cbfs/cbfs/compat/src/: lib.rs
cbfs/cbfs/src/: main.cpp
cbfs/compat/: cbindgen.toml
cbfs/compat/src/: lib.rs
cbfs/scripts/: fs_test.py
cbfs/src/: datetime.rs  entries.rs  filesystem.rs  fserr.rs  lib.rs  main.cpp  main.rs
cbfsc/: .clang-format  .gitignore  CMakeLists.txt
cbfsc/src/: main.cpp
cbos/: app.cb  bootloader.cb  os.cb
cbos/kernel/: kfs.cb  kmalloc_dbg.cb  kshell.cb
cbos/std/: string.cb
cbuoy-cbc/: Cargo.toml
cbuoy/cbc/: Cargo.toml
cbuoy/cbc/src/: main.rs
cbuoy/cblang/: Cargo.toml
cbuoy/cblang/examples/: array_test.cb  default.cb  printing.cb  threading.cb
cbuoy/cblang/src/: compiler.rs  expressions.rs  functions.rs  lib.rs  literals.rs  parser.rs  preprocessor.rs  tokenizer.rs  typing.rs  utilities.rs  variables.rs
cbuoy/cblang/tests/: test_kmalloc.cb  test_struct_ptr.cb
cbuoy/cbuoy/: Cargo.toml
cbuoy/cbuoy/examples/: array_test.cb  printing.cb
cbuoy/cbuoy/src/: compiler.rs  expressions.rs  functions.rs  lib.rs  literals.rs  tokenizer.rs  typing.rs  utilities.rs
cbuoy/components/: bootloader.cb  os.cb
cbuoy/components/kernel/: kclock.cb  kconfig.cb  kcpu.cb  kdbg.cb  kdevice.cb  kfs.cb  kmalloc.cb  krtc.cb  kserialio.cb  kshell.cb  ktsk.cb
cbuoy/components/std/: list.cb
cbuoy/examples/: default.cb  os.cb  printing.cb  threading.cb
cbuoy/examples/components/: kcpu.cb  kirq.cb  klist.cb  kmalloc.cb  kserialio.cb  ktsk.cb  serialio.cb  std_list.cb  std_string.cb
cbuoy/examples/tests/: test_kmalloc.cb  test_struct_ptr.cb
cbuoy/src/: compiler.rs  expressions.rs  functions.rs  lib.rs  literals.rs  parser.rs  preprocessor.rs  tokenizer.rs  typing.rs  utilities.rs  variables.rs
cbuoy/tests/: test_kmalloc.cb  test_struct_ptr.cb
circ-buff/: Cargo.toml
circ-buff/src/: lib.rs
doc/: isa.tex
jib/: Cargo.toml
jib-asm/: Cargo.toml
jib-asm/examples/: hello_world.jsm  serial_echo.jsm  thread_test.jsm
jib-asm/src/: argument.rs  immediate.rs  instructions.rs  lib.rs
jib-computer/: Cargo.toml  build.rs
jib-computer/src/: lib.rs
jib-term/: Cargo.toml
jib-term/src/: main.rs
jib/jib-asm/: Cargo.toml
jib/jib-asm/examples/: serial_echo.jsm  thread_test.jsm
jib/jib-asm/src/: argument.rs  immediate.rs  instructions.rs  lib.rs
jib/jib-computer/: Cargo.toml
jib/jib-computer/src/: lib.rs
jib/jib-cpu/: Cargo.toml
jib/jib-cpu/src/: lib.rs
jib/jib-cpu/src/cpu/: mod.rs  operations.rs
jib/jib-cpu/src/device/: block_device.rs  serial_io.rs
jib/jib-cpu/src/memory/: memory_map.rs  mod.rs  segment_ro.rs
jib/jib-term/: Cargo.toml
jib/jib-term/src/: main.rs
jib/src/cpu/: instruction.rs  mod.rs  register.rs
jib/src/device/: block_device.rs  circ_buf.rs  irq_clock.rs  mod.rs  rtc_clock.rs  rtc_timer.rs  serial_io.rs
jib/src/memory/: memory_map.rs  segment_rw.rs
jib/src/text/: mod.rs
jibc/: CMakeLists.txt
jibc/include/: jib.h
jibc/src/: devices.cpp  jib.cpp  memory.cpp  memory_helpers.cpp  memory_helpers.h
visual-jib/: Cargo.toml  Trunk.toml  build.rs  index.html
visual-jib-egui/: Cargo.toml  index.html
visual-jib-egui/assets/: manifest.json
visual-jib-egui/src/: app.rs  main.rs
visual-jib-gtk/: Cargo.toml
visual-jib-gtk/src/: cpu_thread.rs  main.rs  main_window.rs  messages.rs
visual-jib-lib/: Cargo.toml
visual-jib-lib/src/: cpu_thread.rs  lib.rs
visual-jib/assets/: sw.js
visual-jib/desktop/: visual-jib.desktop
visual-jib/src/: app.rs  cpu_thread.rs  examples.rs  main.rs  main_window.rs  messages.rs
