[workspace]

members = [
    "cbuoy/cbuoy",
    "cbuoy/cbc",
    "cbfs/cbfs/compat",
    "cbfs/cbfs-lib",
    "cbfs/cbfs-util",
    "jib-asm",
    "jib",
    "visual-jib",
]
default-members = ["visual-jib"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = true
strip = true
