[workspace]

members = [
    "cbuoy/cbuoy",
    "cbuoy/cbc",
    "cbfs/cbfs/compat",
    "cbfs/cbfs-lib",
    "cbfs/cbfs-util",
    "jib",
    "jib-asm",
    "jib-computer",
    "jib-term",
    "visual-jib",
    "circ-buff",
]
default-members = ["visual-jib"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[profile.release]
lto = true
strip = true
