[package]
name = "cbfs-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", optional = true }
flate2 = { version = "1.1", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

[features]
default = ["time", "gzip"]
time = ["dep:chrono"]
gzip = ["dep:flate2"]
