[package]
name = "cbfs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.16"
#fuser = { git = "https://github.com/imorourke/fuser.git", branch = "dev/fuset" }
cbfs-lib = { path = "../cbfs-lib", version = "*" }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
simple_logger = "5.1"
