[package]
name = "jib-computer"
version = "0.1.0"
edition = "2024"

[dependencies]
jib = { path = "../jib", version = "*" }
jib-asm = { path = "../jib-asm", version = "*" }
cbuoy = { path = "../cbuoy/cbuoy", version = "*" }
cbfs-lib = { path = "../cbfs/cbfs-lib", version = "*", default-features = false }
circ-buff = { path = "../circ-buff", version = "*" }

[build-dependencies]
chrono = { workspace = true }
