[package]
name = "visual-jib"
version = "0.1.0"
edition = "2024"

[features]
nothread = []

[dependencies]
jib-cpu = { workspace = true }
jib-computer = { workspace = true }
jib-asm = { workspace = true }
cblang = { workspace = true }
cbfs-lib = { workspace = true }
eframe = "0.34"
image = "0.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4"

[build-dependencies]
chrono = "0.4.43"

[package.metadata.packager]
product-name = "VisualJib"
identifier = "io.github.imorourke.VisualJib"
icons = ["../doc/images/logo.png"]
category = "DeveloperTool"
linux.generate-desktop-entry = true
